<resources>
    <string name="app_name">Pencit</string>
    <string name="menu_button">Menu Button</string>
    <string name="Image_show">Image Show</string>
    <string name="memory_lack_error">Image Size is Too Big&#8230;</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="ok">OK</string>
    <string name="image_saved">Image Saved</string>
    <string name="failed_saved_image">Failed Saved Image</string>

    <string name="img_histogram">Image Histogram</string>
    <string name="red_layer">Red Layer</string>
    <string name="green_layer">Green Layer</string>
    <string name="blue_layer">Blue Layer</string>
    <string name="scrollable">Scrollable ?</string>
    <string name="matching_dialog">Detect matching pattern&#8230;</string>

    <string name="img_background">Image Background</string>
    <string name="img_without_item">Image Without Item</string>
    <string name="img_with_item">Image With Item</string>
    <string name="img_levitation">Levitation Image</string>

    <string name="levitation_info">Levitation Info</string>
    <string name="histogram">Histogram</string>
    <string name="rgb_histogram">RGB Histogram</string>
    <string name="hsv_histogram">HSV Histogram</string>
    <string name="cdf">CDF</string>
    <string name="rgb_cdf">RGB CDF</string>
    <string name="hsv_cdf">HSV CDF</string>
    <string name="matching">Matching</string>
    <string name="save">Save</string>

    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="value">Value</string>

    <string name="levitation">Levitation</string>
    <string name="detection_tomato_maturity">Detection of Tomato Maturity</string>
    <string name="detection_num_hist_projection">Detection of Number with Histogram Projection</string>
    <string name="kmeans_cluster">K-Means Cluster</string>
    <string name="filter">Filter</string>
    <string name="enhance">Enhance</string>

    <string name="rotate">Rotate</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="noise_gaussian">Noise Gaussian</string>
    <string name="noise_speckle">Noise Speckle</string>
    <string name="noise_saltpepper">Noise Salt and Pepper</string>

    <string name="btn_check">Button Check</string>
    <string name="btn_close">Button Close</string>

    <string name="loading">Loading&#8230;</string>
    <string name="cluster_hint">Input Numbers of Cluster&#8230;</string>
    <string name="cluster_loading">Clustering Image&#8230;</string>
    <string name="cluster_error">Number of Cluster Must Be More Than 1</string>

    <string name="tomato_msg">Your tomatoes are</string>
    <string name="num_msg">Your number is</string>
    <string name="mature">Mature</string>
    <string name="half_mature">Half Mature</string>
    <string name="immature">Immature</string>

    <string name="levitation_info_msg">
        \t 1. \t Add img background \n
        \t 2. \t Add img without item \n
        \t 3. \t Add img with item \n
        \t 4. \t Click proceed
    </string>

    <string-array name="menu">
        <item>Flip</item>
        <item>Layer</item>
        <item>Grayscale</item>
        <item>Black and White</item>
        <item>Reduksi Noise</item>
        <item>Filter</item>
        <item>Deteksi Tepi</item>
        <item>Kuantisasi</item>
        <!--<item>@string/rotate</item>-->
        <item>@string/brightness</item>
        <item>@string/contrast</item>
        <item>@string/noise_gaussian</item>
        <item>@string/noise_speckle</item>
        <item>@string/noise_saltpepper</item>
    </string-array>

    <string-array name="menu1">
        <item>Original Image</item>
        <item>Flip Horizontal</item>
        <item>Flip Vertical</item>
        <item>Flip Horizontal-Vertical</item>
    </string-array>

    <string-array name="menu2">
        <item>Original Image</item>
        <item>Layer Red</item>
        <item>Layer Green</item>
        <item>Layer Blue</item>
        <item>Sepia</item>
        <item>Invers</item>
    </string-array>

    <string-array name="menu3">
        <item>Original Image</item>
        <item>Grayscale Red</item>
        <item>Grayscale Green</item>
        <item>Grayscale Blue</item>
        <item>Grayscale Mean</item>
    </string-array>

    <string-array name="menu4">
        <item>Original Image</item>
        <item>Black and White</item>
        <item>Black and White 100</item>
        <item>Black and White 200</item>
        <!--<item>Black and White Mean</item>-->
    </string-array>

    <string-array name="menu5">
        <item>Original Image</item>
        <item>Filter Mean</item>
        <item>Filter Gaussian</item>
        <item>Filter Median</item>
        <item>Auto Level</item>
        <item>Grayscale Auto Level</item>
        <item>Histogram Equalization</item>
        <item>Grayscale Histogram Equalization</item>
        <item>Sharpness</item>
    </string-array>

    <string-array name="menu6">
        <item>Original Image</item>
        <item>Low Pass Filter</item>
        <item>High Pass Filter</item>
        <item>Band Stop Filter</item>
    </string-array>

    <string-array name="menu7">
        <item>Original Image</item>
        <item>Robert Method</item>
        <item>Prewitt Method</item>
        <item>Sobel Method</item>
        <item>Laplacian Method</item>
        <item>Hilditch Thinning</item>
        <item>Zhang-Suen Thinning</item>
        <item>Sketch</item>
        <item>New Sketch</item>
    </string-array>

    <string-array name="menu8">
        <item>Original Image</item>
        <item>Kuantisasi 2 bit</item>
        <item>Kuantisasi 4 bit</item>
        <item>Kuantisasi 8 bit</item>
        <item>Kuantisasi 16 bit</item>
        <item>Kuantisasi 32 bit</item>
        <item>Kuantisasi 64 bit</item>
        <item>Kuantisasi 128 bit</item>
    </string-array>
</resources>