<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_histogram"
        android:title="@string/histogram"
        app:showAsAction="never" />

    <!--<item-->
    <!--android:id="@+id/menu_matching"-->
    <!--android:title="@string/matching"-->
    <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/menu_detection_tomato_maturity"
        android:title="@string/detection_tomato_maturity"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_detection_num_hist_projection"
        android:title="@string/detection_num_hist_projection"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_kmeans_cluster"
        android:title="@string/kmeans_cluster"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_save"
        android:title="@string/save"
        app:showAsAction="never" />
</menu>